--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+.sai
+{
+  width:700px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navColor{
+  color:white!important;
+  font-weight:bold !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#navbarScrollingDropdown
+{
+  color:white;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.imgGrocery{
+  /* text-align:center; */
+  color:black;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.allGroceryImg{
+  display:flex;
+  flex-direction:row;
+  justify-content: space-evenly;
+  text-align:center;
 }
