--- a/src/App.css
+++ b/src/App.css
@@ -85,5 +85,22 @@ transition: 0.6s;
   transition: 0.5s;
   color: bisque;
 }
-
+.allInOne
+{
+  text-align:center;
+  border:0px solid black;
+  box-shadow: 50px 45px 77px whitesmoke;
+  padding:5px;
+}
+.allInOne:hover{
+  transform: scale(1.08);
+}
+h6{
+  color:grey;
+}
+.mainDiv{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 
