--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,54 @@ h6{
   justify-content: space-evenly;
   
 }
+.card-last{
+  background-color: black;
+   color: azure;
+   width: 100%;
+   height: 300px;
+   display: flex;
+   flex-direction: row;
+    justify-content: space-around;
+   align-items:center;
+}
+.card-div{
+ 
+  text-align:justify;
+ 
+  
+  
+}
+.about-p{
+  opacity: 0.5;
+  text-align: justify;
+  
+  
+} 
+.anil{
+  display: flex;
+  line-height: 0.6;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding:20px;
+  /* color: azure; */
+  background-color: #172337;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(auto-fit,minmax(380px,auto));
+  gap: 1rem;
 
-
-
-
+}
+/* p{
+  color:white;
+  
+} */
+.para-div{
+  color: white;
+}
+.hr{
+  color: red;
+  border: 2px solid red;
+  width: 1000px;
+  
+}
